--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,9 +3,6 @@ services:
     build:
       dockerfile: docker/Dockerfile
       context: ../
-      args:
-        USERID: $USERID
-        USERNAME: $USERNAME
     image: ar4_gazebo
     container_name: ar4_gazebo
     hostname: ar4_gazebo
@@ -18,6 +15,6 @@ services:
       NVIDIA_VISIBLE_DEVICES: all
       NVIDIA_DRIVER_CAPABILITIES: all
     volumes:
-      - ../:/home/${USERNAME}/workspace
+      - ../:/workspace
       - /tmp/.X11-unix/:/tmp/.X11-unix/
       - /tmp/.docker.xauth:/tmp/.docker.xauth
