--- a/ar4_gazebo/package.xml
+++ b/ar4_gazebo/package.xml
@@ -14,6 +14,7 @@
 
   <exec_depend>ar4_description</exec_depend>
   <exec_depend>gazebo</exec_depend>
+  <exec_depend>ign_ros2_control</exec_depend>
   <exec_depend>gazebo_ros_pkgs</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>ros2launch</exec_depend>
