adress some pr comment
change image

clean some unused files

clean duplicate files

Added moveit config README file

update author and mainteners names

added end line to some files

Signed-off-by: SantiagoLM <sanlopz93@gmail.com>

--- a/ar4_control/package.xml
+++ b/ar4_control/package.xml
@@ -4,9 +4,9 @@
   <version>1.0.0</version>
   <description>AR4 ROS 2 control package</description>
 
-  <author email="wagnermarcos@ekumenlabs.com">Marcos Wagner</author>
-  <maintainer email="wagnermarcos@ekumenlabs.com">Marcos Wagner</maintainer>
-  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
+  <author email="santiago.mendez@creativa77.com.ar">Santiago Lopez mendez</author>
+  <maintainer email="steven.desvars@creativa77.com.ar">Steven Desvars</maintainer>
+  <maintainer email="santiago.mendez@creativa77.com.ar">Santiago Lopez mendez</maintainer>
 
   <license>BSD</license>
 
