--- a/ar4_description/package.xml
+++ b/ar4_description/package.xml
@@ -3,9 +3,9 @@
   <name>ar4_description</name>
   <version>1.0.0</version>
   <description>AR4 robot description</description>
-  <author email="wagnermarcos@ekumenlabs.com">Marcos Wagner</author>
-  <maintainer email="wagnermarcos@ekumenlabs.com">Marcos Wagner</maintainer>
-  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
+  <author email="steven.desvars@creativa77.com.ar">Steven Desvars</author>
+  <maintainer email="steven.desvars@creativa77.com.ar">Steven Desvars</maintainer>
+  <maintainer email="santiago.mendez@creativa77.com.ar">Santiago Lopez mendez</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
