--- a/ar4_gazebo/package.xml
+++ b/ar4_gazebo/package.xml
@@ -5,9 +5,9 @@
   <description>
     Launch Gazebo simulation with Ar4 robot.
   </description>
-  <author email="wagnermarcos@ekumenlabs.com">Marcos Wagner</author>
-  <maintainer email="wagnermarcos@ekumenlabs.com">Marcos Wagner</maintainer>
-  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
+  <author email="santiago.mendez@creativa77.com.ar">Santiago Lopez mendez</author>
+  <maintainer email="steven.desvars@creativa77.com.ar">Steven Desvars</maintainer>
+  <maintainer email="santiago.mendez@creativa77.com.ar">Santiago Lopez mendez</maintainer>
   <license file="LICENSE">BSD Clause 3</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
