--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,10 +13,9 @@ services:
     tty: true
     environment:
       DISPLAY: $DISPLAY
-      XAUTHORITY: /tmp/.docker.xauth
+      QT_X11_NO_MITSHM: 1
       NVIDIA_VISIBLE_DEVICES: all
       NVIDIA_DRIVER_CAPABILITIES: all
     volumes:
-      - ../:/workspace
+      - ../:/workspace/src/ar4
       - /tmp/.X11-unix/:/tmp/.X11-unix/
-      - /tmp/.docker.xauth:/tmp/.docker.xauth
