--- a/ar4_description/CMakeLists.txt
+++ b/ar4_description/CMakeLists.txt
@@ -4,13 +4,10 @@ project(ar4_description)
 find_package(ament_cmake REQUIRED)
 
 install(
-  DIRECTORY
-    config
-    launch
-    meshes
-    urdf
-  DESTINATION
-    share/${PROJECT_NAME}/
-)
+  DIRECTORY config
+            launch
+            meshes
+            urdf
+  DESTINATION share/${PROJECT_NAME}/)
 
 ament_package()
