Add AR4 in Isaac (#10)
This patch adds the AR4 simulation with Isaac including the integration
with MoveIt

Signed-off-by: Steven Desvars <steven.desvars@ekumenlabs.com>
Signed-off-by: Francisco Rossi <frossi@ekumenlabs.com>
Signed-off-by: Gerardo Puga <glpuga@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,7 @@ repos:
         exclude: ^ar4_description/config/ar4.yaml$
       - id: check-xml
       - id: end-of-file-fixer
+        exclude: 'ar4_isaac/usda/'
       - id: trailing-whitespace
 
   - repo: https://github.com/pre-commit/mirrors-clang-format
