--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,3 +19,9 @@ services:
     volumes:
       - ../:/workspace/src/ar4
       - /tmp/.X11-unix/:/tmp/.X11-unix/
+  ar4_hardware:
+    extends: ar4_gazebo
+    devices:
+      - "/dev/ttyACM0:/dev/ttyACM0:rwm" # Serial port for the teensy
+    group_add:
+      - "dialout" # Group required for accesing /dev/ttyACM0
