update moveit files
Signed-off-by: SantiagoLM <sanlopz93@gmail.com>

--- a/ar4_moveit_config/config/initial_positions.yaml
+++ b/ar4_moveit_config/config/initial_positions.yaml
@@ -1,6 +1,7 @@
 # Default initial positions for ar4's ros2_control fake system
 
 initial_positions:
+  gripper_jaw1_joint: 0
   joint_1: 0
   joint_2: 0
   joint_3: 0
