--- a/ar4_moveit_config/config/ros2_controllers.yaml
+++ b/ar4_moveit_config/config/ros2_controllers.yaml
@@ -8,6 +8,10 @@ controller_manager:
     # gripper_controller:
     #   type: position_controllers/GripperActionController
 
+    gripper_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
+
+
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
@@ -38,3 +42,13 @@ arm_controller:
 # gripper_controller:
 #   ros__parameters:
 #     joint: gripper_jaw1_joint
+      - velocity
+gripper_controller:
+  ros__parameters:
+    joints:
+      - gripper_jaw1_joint
+    command_interfaces:
+      - position
+    state_interfaces:
+      - position
+      - velocity
