--- a/ar4_gazebo/CMakeLists.txt
+++ b/ar4_gazebo/CMakeLists.txt
@@ -33,6 +33,6 @@ project(ar4_gazebo)
 
 find_package(ament_cmake REQUIRED)
 
-install(DIRECTORY config launch urdf DESTINATION share/${PROJECT_NAME}/)
+install(DIRECTORY launch urdf DESTINATION share/${PROJECT_NAME}/)
 
 ament_package()
