--- a/ar4_moveit_config/package.xml
+++ b/ar4_moveit_config/package.xml
@@ -18,7 +18,7 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>ar4_gazebo</exec_depend>
+  <exec_depend>ar4_description</exec_depend>
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>joint_state_publisher_gui</exec_depend>
