--- a/ar4_hardware_interface/package.xml
+++ b/ar4_hardware_interface/package.xml
@@ -15,6 +15,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>ar4_description</depend>
+  <depend>ar4_moveit_config</depend>
   <depend>boost</depend>
   <depend>controller_manager</depend>
   <depend>hardware_interface</depend>
