Integrate MoveIt with AR4 Isaac
Signed-off-by: Steven Desvars <steven.desvars@ekumenlabs.com>

--- a/ar4_isaac/CMakeLists.txt
+++ b/ar4_isaac/CMakeLists.txt
@@ -36,6 +36,7 @@ find_package(ament_cmake REQUIRED)
 install(
   DIRECTORY launch
             scripts
+            urdf
             usda
   DESTINATION share/${PROJECT_NAME}/)
 
