--- a/ar4_isaac/package.xml
+++ b/ar4_isaac/package.xml
@@ -12,6 +12,9 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <exec_depend>controller_manager</exec_depend>
+  <exec_depend>topic_based_ros2_control</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
