--- a/ar4_common/package.xml
+++ b/ar4_common/package.xml
@@ -2,9 +2,7 @@
 <package format="3">
   <name>ar4_common</name>
   <version>0.0.1</version>
-  <description>
-    Launch Gazebo simulation with Ar4 robot.
-  </description>
+  <description>Package containint launcher for HAL-independent parts of the stack</description>
   <author email="santiago.mendez@creativa77.com.ar">Santiago Lopez mendez</author>
   <maintainer email="steven.desvars@creativa77.com.ar">Steven Desvars</maintainer>
   <maintainer email="santiago.mendez@creativa77.com.ar">Santiago Lopez mendez</maintainer>
