--- a/ar4_moveit_config/config/joint_limits.yaml
+++ b/ar4_moveit_config/config/joint_limits.yaml
@@ -8,11 +8,11 @@ default_acceleration_scaling_factor: 0.1
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
-  # gripper_jaw1_joint:
-  #   has_velocity_limits: true
-  #   max_velocity: 100.0
-  #   has_acceleration_limits: false
-  #   max_acceleration: 0
+  gripper_jaw1_joint:
+    has_velocity_limits: true
+    max_velocity: 100.0
+    has_acceleration_limits: false
+    max_acceleration: 0
   gripper_jaw2_joint:
     has_velocity_limits: true
     max_velocity: 100.0
