--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,11 +11,11 @@ services:
     tty: true
     environment:
       - DISPLAY
-      - QT_X11_NO_MITSHM=1
-      - XAUTHORITY=/tmp/.docker.xauth
-      - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=all
+      - NVIDIA_VISIBLE_DEVICES=all
+      - QT_X11_NO_MITSHM=1
       - ROS_DOMAIN_ID=${ROS_DOMAIN_ID:-0}
+      - XAUTHORITY=/tmp/.docker.xauth
     volumes:
       - ../:/home/developer/ws/src/project
       - /dev:/dev
@@ -23,35 +23,40 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ar_persistence:/home/developer/ws/persistence
 
-  ar4_hardware:
-    extends: ar4_gazebo
-    devices:
-      - "/dev/ttyACM0:/dev/ttyACM0:rwm" # Serial port for the teensy
-    group_add:
-      - "dialout" # Group required for accesing /dev/ttyACM0
+  # ar4_hardware:
+  #   extends: ar4_gazebo
+  #   devices:
+  #     - "/dev/ttyACM0:/dev/ttyACM0:rwm" # Serial port for the teensy
+  #   group_add:
+  #     - "dialout" # Group required for accesing /dev/ttyACM0
 
   ar4_isaac:
     build:
-      context: ../
       dockerfile: docker/Dockerfile.isaac
+      context: ../
     image: ar4_isaac
     container_name: ar4_isaac
     hostname: ar4_isaac
+    user: ${USERID}:${GROUPID}
     stdin_open: true
     tty: true
-    runtime: nvidia
+    # runtime: nvidia
     environment:
-      ACCEPT_EULA: Y
-      DISPLAY: $DISPLAY
-      FASTDDS_BUILTIN_TRANSPORTS: SHM
-      NVIDIA_DRIVER_CAPABILITIES: all
-      OMNI_KIT_ACCEPT_EULA: Y
-      PRIVACY_CONSENT: Y
-      QT_X11_NO_MITSHM: 1
-      RMW_IMPLEMENTATION: rmw_fastrtps_cpp
-      XAUTHORITY: /tmp/.docker.xauth
+      - ACCEPT_EULA=Y
+      - DISPLAY
+      - FASTDDS_BUILTIN_TRANSPORTS=SHM
+      - NVIDIA_DRIVER_CAPABILITIES=all
+      - OMNI_KIT_ACCEPT_EULA=Y
+      - PRIVACY_CONSENT=Y
+      - QT_X11_NO_MITSHM=1
+      - RMW_IMPLEMENTATION=rmw_fastrtps_cpp
+      - ROS_DOMAIN_ID=${ROS_DOMAIN_ID:-0}
+      - XAUTHORITY=/tmp/.docker.xauth
     volumes:
+      - ../:/home/developer/ws/src/project
+      - /tmp/.docker.xauth:/tmp/.docker.xauth
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      - ar_persistence:/home/developer/ws/persistence
       # Mount necessary isaac sim directories
       # See: https://docs.isaacsim.omniverse.nvidia.com/latest/installation/install_container.html#container-deployment
       - ~/docker/isaac-sim/cache:/isaac-sim/kit/cache:rw
@@ -64,7 +69,5 @@ services:
       - ~/docker/isaac-sim/kit/logs:/isaac-sim/kit/logs:rw
       - ~/docker/isaac-sim/logs:/root/.nvidia-omniverse/logs:rw
       - ~/docker/isaac-sim/shadercache:/isaac-sim/kit/exts/omni.gpu_foundation/cache/nv_shadercache:rw
-      # Workspace
-      - ../:/workspace/src/ar4
 volumes:
   ar_persistence:
