--- a/ar4_mujoco_bringup/package.xml
+++ b/ar4_mujoco_bringup/package.xml
@@ -2,7 +2,7 @@
 <package format="3">
   <name>ar4_mujoco_bringup</name>
   <version>0.0.1</version>
-  <description>Launch AR4 software against a Mujoco simulation of the robot</description>
+  <description>Launch AR4 software against a MuJoCo simulation of the robot</description>
   <author email="glpuga@ekumenlabs.com">Gerardo Puga</author>
   <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>
   <license file="LICENSE">BSD-3-Clause</license>
