--- a/ar4_mujoco_sim/package.xml
+++ b/ar4_mujoco_sim/package.xml
@@ -2,7 +2,7 @@
 <package format="3">
   <name>ar4_mujoco_sim</name>
   <version>0.0.1</version>
-  <description>Launch Mujoco simulation of the AR4</description>
+  <description>Launch MuJoCo simulation of the AR4</description>
   <author email="glpuga@ekumenlabs.com">Gerardo Puga</author>
   <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>
   <license file="LICENSE">BSD-3-Clause</license>
